--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --coverage --watchAll"
+    "test": "jest",
+    "test:coverage": "jest --coverage --watchAll"
   },
   "keywords": [],
   "author": "",
